added score counter and winner declaration

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,27 @@
 .container {
     width: 850px;
+    height: 100vh;
     margin: auto;
-    background-color: grey
+    background-color: grey;
+}
+
+button {
+    height: 50px;
+    width: 75px;
+    padding: 10px;
 }
 
 #rock {
     color: red;
+    margin-right: 185px;
+    margin-top: 25px;
+    margin-left: 125px;
+    margin-bottom: 25px;
 }
 
 #paper {
     color: blue;
+    margin-right: 185px;
 }
 
 #scissors {
@@ -17,9 +29,42 @@
 }
 
 .displayDiv {
-    height: 50px;
+    height: 550px;
     display: flex;
     text-align: center;
     justify-content: center;
+    align-items: center;
+}
+
+.tieDiv {
+    color: red;
+    background-color: honeydew;
+    height: 50px;
+    width: 150px;
+    text-align: center;
+}
+
+.cwDiv {
+    color: red;
+    background-color: honeydew;
+    height: 50px;
+    width: 150px;
+    text-align: center;
+}
+
+.pwDiv {
+    color: red;
+    background-color: honeydew;
+    height: 50px;
+    width: 150px;
+    text-align: center;
+}
+
+.winnerDiv {
+    color: red;
+    background-color: honeydew;
+    height: 50px;
+    width: 150px;
+    text-align: center;
 }
 
