--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,36 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+    background-color: black;
+}
+
 .container {
-    width: 850px;
+    width: 1250px;
     height: 100vh;
     margin: auto;
     background-color: grey;
 }
 
 button {
-    height: 50px;
-    width: 75px;
-    padding: 10px;
+    padding: 20px;
+    background-color: aliceblue;
+    border: none;
+    border-radius: 50px;
+    width: 15em;
+    margin-top: 5em;
+}
+
+button:hover {
+    background-color: aqua;
 }
 
 #rock {
@@ -29,42 +51,29 @@ button {
 }
 
 .displayDiv {
-    height: 550px;
+    height: 250px;
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
+    background-color: blue;
+    color: white;
+    font-size: 1.5em;
 }
 
-.tieDiv {
-    color: red;
-    background-color: honeydew;
-    height: 50px;
-    width: 150px;
-    text-align: center;
-}
-
-.cwDiv {
-    color: red;
-    background-color: honeydew;
-    height: 50px;
-    width: 150px;
-    text-align: center;
-}
-
-.pwDiv {
-    color: red;
-    background-color: honeydew;
-    height: 50px;
-    width: 150px;
-    text-align: center;
+.headerDiv {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 5em;
+    font-size: 1.5em;
 }
 
 .winnerDiv {
     color: red;
-    background-color: honeydew;
-    height: 50px;
-    width: 150px;
     text-align: center;
+    margin: auto;
+    margin-top: 3em;
+    font-size: 3em;
 }
 
